implement task 4 and update 6

--- a/Advanced_Workbook_Task_6/main.html
+++ b/Advanced_Workbook_Task_6/main.html
@@ -18,7 +18,7 @@
                     <label for="email">Email *</label><br/>
                     <input name="email" type="text" placeholder="Your Email" required/><br/>
                     <label for="phone-number">Phone Number</label><br/>
-                    <input name="phone-number" type="text" placeholder="Your Phone Number"/><br/>
+                    <input name="phone-number" type="number" placeholder="Your Phone Number"/><br/>
                     <label for="computer-component">Component *</label><br/>
                     <select name="computer-component" required onchange="changeComputerComponent()">
                         <option value="" disabled selected>Select Component</option>
